<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FESB Companion</string>
    <string name="getRest">Odmori se, danas nemaš obaveza!</string>
    <string name="todaysEvents">Današnji raspored</string>
    <string name="prehrana">PREHRANA</string>
    <string name="tab_iksica">Iksica</string>
    <string name="tab_attendance">Prisutnost</string>
    <string name="tab_home">Home</string>
    <string name="tab_timetable">Raspored</string>
    <string name="tab_studomat">Studomat</string>
    <string name="unavailabe">Nedostupna radnja</string>
    <string name="check_timetable">Provjeri svoj raspored</string>
    <string name="timetable_quick">Raspored</string>
    <string name="add_reminder_long">Dodaj novi podsjetnik</string>
    <string name="add_reminder_short">Novi podsjetnik</string>
    <string name="check_attend">Provjeri dolaske na predavanja</string>
    <string name="attend_quick">Prisutnost</string>
    <string name="settings">Postavke</string>
    <string name="refresh">Osvježi</string>
    <string name="change_week">Promjena tjedna</string>
    <string name="login_error_empty_credentials">Niste unijeli korisničke podatke</string>
    <string name="login_error_invalid_credentials">Uneseni podaci su netočni</string>
    <string name="login_error_generic">Uneseni podaci su netočni</string>
    <string name="login_email_or_username">FESB email ili korisničko ime</string>
    <string name="login_password">Lozinka</string>
    <string name="login_action_submit">Prijava</string>
    <string name="login_login_title">Prijavi se</string>
    <string name="login_safe_data">Tvoji podaci su sigurni i ne dijele se s trećim stranama.</string>
    <string name="weather_icon_desc">Ikona vremena</string>
    <string name="hi_user">Bok %1$s</string>
    <string name="weather_error">Došlo je do pogreške pri dohvaćanju vremenske prognoze</string>
    <string name="notes">PODSJETNICI</string>
    <string name="enter_note">Unesi podsjetnik</string>
    <string name="add_note">Dodaj podsjetnik</string>
    <string name="save_note">Spremi</string>
    <string name="cancel_note">Odustani</string>
    <string name="delete_note_desc">Izbriši</string>
    <string name="checkmark_note_desc">Označi/odznači</string>
    <string name="ugovori_title">Studentski Ugovori</string>
    <string name="ugovori_desc">Pregledaj svoje ugovore</string>
    <string name="menza_title">Menza</string>
    <string name="menza_desc">Pregledaj dnevni jelovnik</string>
    <string name="lastMonth">Prošli</string>
    <string name="nextMonth">Sljedeći</string>
    <string name="cancelChoosingWeek">Odustani</string>
    <string name="chooseChoosingWeek">Odaberi</string>
    <string name="attendance_error">Došlo je do pogreške</string>
    <string name="attendance_offline">Niste povezani</string>
    <string name="attendance_retry">Ponovi</string>
    <string name="attendance_stats_format">Odrađeno %1$s/%2$s. Obavezno %3$s</string>
    <string name="first_semester">1. Semestar</string>
    <string name="second_semester">2. Semestar</string>
    <string name="elective_group">Izborna grupa:</string>
    <string name="semester">Semestar:</string>
    <string name="lectures">Predavanja:</string>
    <string name="exercises">Vježbe:</string>
    <string name="ects_enrolled">ECTS upisano:</string>
    <string name="is_taken">Polaže se:</string>
    <string name="status">Status:</string>
    <string name="grade">Ocjena:</string>
    <string name="exam_date">Datum ispitnog roka:</string>
    <string name="enrolled_subjects">Upisani predmeti</string>
    <string name="open_webview">Upravljaj kolegijima i prijavi ispite online</string>
    <string name="no_data">Nema podataka za prikazati.</string>
    <string name="webview">webview</string>
    <string name="page_not_found">page not found</string>
    <string name="studomar_error">Greška prilikom dohvaćanja podataka</string>
    <string name="studomat_error_general">Došlo je do pogreške</string>
    <string name="weather_temp">%1$.0f°</string>
    <string name="weather_humidity">%1$.1f%%</string>
    <string name="weather_precip_chance">%1$.1f mm</string>
    <string name="weather_wind">%1$.1f km/h</string>
    <string name="meni_price">%1$s €</string>
    <string name="meals_by_choice">JELA PO IZBORU</string>
    <string name="menza_no_data">Nije postavljen jelovnik za današnji dan.</string>
    <string name="soup">Juha</string>
    <string name="beverage">Napitak</string>
    <string name="main_course">Glavno jelo</string>
    <string name="side_dish">Prilog</string>
    <string name="salad">Salata</string>
    <string name="dessert">Desert</string>
    <string name="category_user">KORISNIK</string>
    <string name="logout">Odjava</string>
    <string name="logged_in_as">Prijavljeni ste kao %1$s</string>
    <string name="contribute">SUDJELUJ U RAZVOJU APLIKACIJE</string>
    <string name="send_feedback">Pošalji povratne informacije</string>
    <string name="feedback_email_subject">[FEEDBACK] FESB Companion</string>
    <string name="help_improve_app">Pomogni učiniti ovu aplikaciju još boljom</string>
    <string name="report_bug_email_subject">[BUG REPORT] FESB Companion</string>
    <string name="report_bug">Prijavi bug</string>
    <string name="help_stabilize_app">Pomozi učiniti aplikaciju stabilnijom slanjem bug reporta</string>
    <string name="make_events_glow">Uključi event glow</string>
    <string name="make_event_glow_description">Postavi glow iza termina u rasporedu</string>
    <string name="customizations">PREFERENCE</string>
    <string name="about_app">O APLIKACIJI</string>
    <string name="version">Verzija</string>
    <string name="developers">Developeri</string>
    <string name="developer_names">Tino Emer i Stipe Jurković</string>
    <string name="data_privacy">Privatnost podataka</string>
    <string name="library_licenses">Licence korištenih biblioteka</string>
    <string name="send_mail_using">Pošalji email pomoću…</string>
    <string name="pogledaj_izvorni_kod">Pogledaj izvorni kod</string>
    <string name="istra_i_projekt_ili_doprinesi_njegovom_razvoju_na_githubu">Istraži projekt ili doprinesi njegovom razvoju na GitHubu.</string>
    <string name="github_repo_url">https://github.com/FESB-Companion/FESB-Companion</string>
    <string name="close">Zatvori</string>
    <string name="iksica_no_data">Nema podataka</string>
    <string name="iksica_loading">Učitavanje…</string>
    <string name="iksica_balance">%1$s €</string>
    <string name="iksica_loading_error">Greška prilikom dohvaćanja računa</string>
    <string name="iksica_no_receipts">Nema računa u zadnjih 30 dana</string>
    <string name="name_label">Ime</string>
    <string name="rights_level_label">Razina prava</string>
    <string name="daily_support_label">Dnevna potpora</string>
    <string name="oib_label">OIB</string>
    <string name="jmbag_label">JMBAG</string>
    <string name="card_number_label">Broj iksice</string>
    <string name="rights_from_label">Prava od</string>
    <string name="right_until_label">Prava do</string>
    <string name="card_balance_label">Stanje iksice</string>
    <string name="transactions">Transakcije</string>
    <string name="transaction_details">Detalji transakcije</string>
    <string name="transaction_total">Ukupno</string>
    <string name="transaction_subsidized">Subvencionirano</string>
    <string name="transaction_paid">Plaćeno</string>
    <string name="currency">\u0020€</string>
    <string name="today">Danas</string>
    <string name="yesterday">Jučer</string>
    <string name="days_ago_one">Prije %1$d dan</string>
    <string name="days_ago_multiple">Prije %1$d dana</string>
    <string name="in_the_future">U budućnosti</string>
    <string name="minus_amount">-%1$s</string>
    <string name="amount_x">%1$sx</string>
    <string name="price_of_item">Cijena: %1$s</string>
    <string name="subsidized_price_of_item">Subvencija: %1$s</string>
    <string name="receipt_details">Detalji</string>
    <string name="error_receipt_details_iksica">Greška prilikom dohvaćanja detalja računa</string>
    <string name="error_fetching_receipts_iksica">Greška prilikom dohvaćanja računa</string>
    <string name="error_general_iksica">Greška prilikom dohvaćanja podataka</string>
    <string name="professor" tools:ignore="Typos">Profesor</string>
    <string name="time">Vrijeme</string>
    <string name="recurring">Ponavlja se</string>
    <string name="group">Grupa</string>
    <string name="classroom">Učionica</string>
    <string name="time_range">%1$s - %2$s</string>
    <string name="general_error">Došlo je do pogreške</string>
    <string name="weather_info">U %1$su %2$s (%3$.1f°C)</string>
    <string name="weather_clearsky">je trenutno vedro</string>
    <string name="weather_fair">je trenutno pretežno vedro</string>
    <string name="weather_partlycloudy">je trenutno djelomično oblačno</string>
    <string name="weather_cloudy">je trenutno oblačno</string>
    <string name="weather_rainshowers">su trenutno pljuskovi kiše</string>
    <string name="weather_rainshowersandthunder">su trenutno pljuskovi kiše s grmljavinom</string>
    <string name="weather_sleetshowers">su trenutno pljuskovi susnježice</string>
    <string name="weather_snowshowers">su trenutno pljuskovi snijega</string>
    <string name="weather_rain">je trenutno kiša</string>
    <string name="weather_heavyrain">je trenutno jaka kiša</string>
    <string name="weather_heavyrainandthunder">je trenutno jaka kiša s grmljavinom</string>
    <string name="weather_sleet">je trenutno susnježica</string>
    <string name="weather_snow">je trenutno snijeg</string>
    <string name="weather_snowandthunder">je trenutno snijeg s grmljavinom</string>
    <string name="weather_fog">je trenutno magla</string>
    <string name="weather_sleetshowersandthunder">su trenutno pljuskovi susnježice s grmljavinom</string>
    <string name="weather_snowshowersandthunder">su trenutno pljuskovi snijega s grmljavinom</string>
    <string name="weather_rainandthunder">je trenutno kiša s grmljavinom</string>
    <string name="weather_sleetandthunder">je trenutno susnježica s grmljavinom</string>
    <string name="weather_lightrainshowersandthunder">su trenutno slabi pljuskovi kiše s grmljavinom</string>
    <string name="weather_heavyrainshowersandthunder">su trenutno jaki pljuskovi kiše s grmljavinom</string>
    <string name="weather_lightssleetshowersandthunder">su trenutno slabi pljuskovi susnježice s grmljavinom</string>
    <string name="weather_heavysleetshowersandthunder">su trenutno jaki pljuskovi susnježice s grmljavinom</string>
    <string name="weather_lightssnowshowersandthunder">su trenutno slabi pljuskovi snijega s grmljavinom</string>
    <string name="weather_heavysnowshowersandthunder">su trenutno jaki pljuskovi snijega s grmljavinom</string>
    <string name="weather_lightrainandthunder">je trenutno slaba kiša s grmljavinom</string>
    <string name="weather_lightsleetandthunder">je trenutno slaba susnježica s grmljavinom</string>
    <string name="weather_heavysleetandthunder">je trenutno jaka susnježica s grmljavinom</string>
    <string name="weather_lightsnowandthunder">je trenutno slab snijeg s grmljavinom</string>
    <string name="weather_heavysnowandthunder">je trenutno jak snijeg s grmljavinom</string>
    <string name="weather_lightrainshowers">su trenutno slabi pljuskovi kiše</string>
    <string name="weather_heavyrainshowers">su trenutno jaki pljuskovi kiše</string>
    <string name="weather_lightsleetshowers">su trenutno slabi pljuskovi susnježice</string>
    <string name="weather_heavysleetshowers">su trenutno jaki pljuskovi susnježice</string>
    <string name="weather_lightsnowshowers">su trenutno slabi pljuskovi snijega</string>
    <string name="weather_heavysnowshowers">su trenutno jaki pljuskovi snijega</string>
    <string name="weather_lightrain">je trenutno slaba kiša</string>
</resources>